RESOLVED FIXED 281793
REGRESSION (280616@main?): [macOS Debug wk2] ASSERTION FAILED: m_wrapper in *WebCore::JSEventListener::ensureJSFunction(ScriptExecutionContext
https://bugs.webkit.org/show_bug.cgi?id=281793
Summary REGRESSION (280616@main?): [macOS Debug wk2] ASSERTION FAILED: m_wrapper in *...
Marta Darbinyan
Reported 2024-10-18 17:13:29 PDT
The following test is a flaky crash on macOS Debug wk2. The crashes started within the range of 280616@main that seems suspicious. imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-204-205-download-then-same-document.html stderr: ASSERTION FAILED: m_wrapper /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebCore/bindings/js/JSEventListener.h(164) : JSC::JSObject *WebCore::JSEventListener::ensureJSFunction(ScriptExecutionContext &) const 1 0x147923dc8 WebCore::JSEventListener::ensureJSFunction(WebCore::ScriptExecutionContext&) const 2 0x147997d44 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 3 0x148738770 WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener>>, 1ul, WTF::CrashOnOverflow, 2ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 4 0x148738140 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 5 0x148737f3c WebCore::EventTarget::dispatchEvent(WebCore::Event&) 6 0x1484f4044 WebCore::AbortSignal::runAbortSteps() 7 0x1484f2d6c WebCore::AbortSignal::signalAbort(JSC::JSValue) 8 0x149767200 WebCore::Navigation::abortOngoingNavigation(WebCore::NavigateEvent&) 9 0x1497685d0 WebCore::Navigation::abortOngoingNavigationIfNeeded() 10 0x1497677fc WebCore::Navigation::innerDispatchNavigateEvent(WebCore::NavigationNavigationType, WTF::Ref<WebCore::NavigationDestination, WTF::RawPtrTraits<WebCore::NavigationDestination>, WTF::DefaultRefDerefTraits<WebCore::NavigationDestination>>&&, WTF::String const&, WebCore::FormState*, WebCore::SerializedScriptValue*) 11 0x149769600 WebCore::Navigation::dispatchPushReplaceReloadNavigateEvent(WTF::URL const&, WebCore::NavigationNavigationType, bool, WebCore::FormState*, WebCore::SerializedScriptValue*) History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fordering-and-transition%2Fnavigate-204-205-download-then-same-document.html&style=debug&flavor=wk2 Test result link: https://build.webkit.org/results/Apple-Sequoia-Debug-AppleSilicon-WK2-Tests/285402@main%20(95)/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-204-205-download-then-same-document-crash-log.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-18 17:26:32 PDT
EWS
Comment 2 2024-10-25 12:32:38 PDT
Test gardening commit 285711@main (fe525f2c206f): <https://commits.webkit.org/285711@main> Reviewed commits have been landed. Closing PR #35734 and removing active labels.
Chris Dumez
Comment 3 2024-11-22 11:41:30 PST
EWS
Comment 4 2024-11-22 15:38:07 PST
Committed 286987@main (dd0e9528e748): <https://commits.webkit.org/286987@main> Reviewed commits have been landed. Closing PR #37039 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.