REGRESSION (280616@main?): [macOS Debug wk2] ASSERTION FAILED: m_wrapper in *WebCore::JSEventListener::ensureJSFunction(ScriptExecutionContext https://bugs.webkit.org/show_bug.cgi?id=281793 rdar://138219837

Reviewed by Ryosuke Niwa.

The test was crashing because the AbortSignal's JS wrapper was destroyed
by the time the navigation gets aborted and we attempt to dispatch an
`abort` event on the AbortSignal object.

The AbortSignal object has an `abort` event listener so one would expect
the JS wrapper to be kept alive. However, the logic in
JSAbortSignalOwner::isReachableFromOpaqueRoots() required both having
an `abort` event listener and having source signals. Source signals only
apply to "dependent" signals so it shouldn't apply here. Tweak this
function to address the lifetime issue.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/bindings/js/JSAbortSignalCustom.cpp:
(WebCore::JSAbortSignalOwner::isReachableFromOpaqueRoots):
* Source/WebCore/dom/AbortSignal.h:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::abortOngoingNavigation):

Canonical link: https://commits.webkit.org/286987@main